--- a/styles.scss
+++ b/styles.scss
@@ -10,6 +10,9 @@ $primary-font: 'Nunito', monospace, san-serif;
   padding: 0;
 }
 
+body {
+  background: #cfeeff;
+}
 header, main {
   padding: 25px 1em;
   text-align: center;
@@ -18,7 +21,7 @@ header, main {
 
 header{
   line-height: 1.9em;
-  font-size: 3vw;
+  font-size: clamp(8px, 3vw, 18px);
   color: $secondary-color;
   background-color: $primary-color;
 }
@@ -30,71 +33,85 @@ main {
 }
 
 .score-board {
+  
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 5vw auto;
+  margin: 3vw auto;
   border: 2px solid $secondary-color;
   border-radius: 5px;
-  padding: 2vh 3vw;
-  font-size: 6vw;
+  padding: 2vh 1vw;
+  font-size: 30px;
   position: relative;
-  width: 50%;
+  width: 35%;
+  max-width: 200px;
+  min-width: 75px;
+
+  .score-div {
+    color: $secondary-color;
+  }
 
   .badge {
     color: $primary-color;
-    // width: 55px;
     border-radius: 5px;
     background: $secondary-color;
   }
 
   #user-label {
     position: absolute;
-    top: 19px;
-    left: -27px;
+    top: 22px;
+    left: -51px;
     padding: 0 5px;
-    font-size: 4.5vw
+    font-size: 1.2rem;
   }
 
   #robot-label {
     position: absolute;
-    top: 19px;
-    right: -27px;
+    top: 22px;
+    right: -62px;
     padding: 0 5px;
-    font-size: 4.5vw
+    font-size: 1.2rem;
   }
 }
 
 .choice-display {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-gap: 10px;
+  grid-gap: 10px 0;
+  width: 80%;
+  margin: 0 auto;
 
   .player-icon {
-    font-size: 6vw;
+    font-size: 2.2rem;
   }
 
   .player-choice {
-    font-size: 4vw;
+    font-size: 1.2rem;
+    color: $secondary-color;
   }
 }
 
 .result {
   padding: 20px;
   font-weight: 600;
-  font-size: 5vw;
+  font-size: clamp(1rem, 4vw, 2rem);
+  color: $secondary-color;
 }
 
 .choices {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5vw;
+  gap: 2vw;
   margin-top: 20px;
 
   img {
-    width: 20vw;
-    padding: 5vw;
+    width: 10vw;
+    max-width: 5rem;
+    margin: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .choice:hover {
@@ -104,12 +121,14 @@ main {
 
 .choice {
   border: 2px solid $secondary-color;
-  border-radius: 40%;
+  border-radius: 50%;
   transition: all 0.3s ease-out;
 }
 
 .action-text {
-  font-size: 4vw;
+  font-size: clamp(0.8rem, 4vw, 2rem);
+  margin-top: 5vw;
+  color: $secondary-color;
 }
 
 .green-glow {
